Basic command implementation in skia context

--- a/server-render/canvex/.vscode/tasks.json
+++ b/server-render/canvex/.vscode/tasks.json
@@ -15,7 +15,7 @@
       }
     },
     {
-      "label": "run canvex standalone",
+      "label": "run canvex demo",
       "type": "shell",
       "command": "build/canvex",
       "group": "build",
