--- a/server-render/canvex/src/meson.build
+++ b/server-render/canvex/src/meson.build
@@ -1,5 +1,8 @@
 canvex_sources = files(
-  'canvex_standalone_main.cpp',
   'canvas_display_list.cpp',
+  'canvex_demo_main.cpp',
+  'canvex_skia_context.cpp',
+  'canvex_skia_executor.cpp',
   'file_util.cpp',
+  'style_util.cpp',
 )
