--- a/server-render/canvex/src/meson.build
+++ b/server-render/canvex/src/meson.build
@@ -1,8 +1,11 @@
-canvex_sources = files(
+canvex_lib_sources = files(
   'canvas_display_list.cpp',
-  'canvex_demo_main.cpp',
   'canvex_skia_context.cpp',
   'canvex_skia_executor.cpp',
   'file_util.cpp',
   'style_util.cpp',
+)
+
+canvex_standalone_demo_sources = files(
+  'canvex_demo_main.cpp',
 )
