Added Rust target to canvex; currently builds a binary that tests the canvex bindings

--- a/server-render/canvex/.vscode/settings.json
+++ b/server-render/canvex/.vscode/settings.json
@@ -73,6 +73,7 @@
     "unordered_map": "cpp",
     "unordered_set": "cpp",
     "utility": "cpp",
-    "vector": "cpp"
+    "vector": "cpp",
+    "filesystem": "cpp"
   }
 }
