Added drawImage() to canvex, updated hello test scenario

--- a/server-render/canvex/.vscode/tasks.json
+++ b/server-render/canvex/.vscode/tasks.json
@@ -17,7 +17,7 @@
     {
       "label": "run canvex demo",
       "type": "shell",
-      "command": "build/canvex",
+      "command": "build/canvex_demo",
       "group": "build",
       "presentation": {
         "reveal": "always",
