--- a/js/package.json
+++ b/js/package.json
@@ -30,7 +30,7 @@
     "hello-node": "yarn run ts-node -T vcs-benchmark.js --comp example/hello.jsx",
     "graphics-test": "yarn run ts-node -T vcs-benchmark.js --comp example/graphics-test.jsx",
     "test-scenario": "yarn run ts-node -T vcs-test-runner.js --scenario",
-    "hello-browser": "yarn webpack --config lib-browser/vcs-browser.webpack.config.js --env=vcsCompId=example:hello; echo 'Now open devrig/vcs-proto-rig.html in your web browser.'",
+    "hello-browser": "yarn webpack --config lib-browser/vcs-browser.webpack.config.js --env=vcsCompId=example:hello; echo 'Now open devrig/vcs-rig.html in your web browser.'",
     "build-browser": "wrap () { yarn webpack --config lib-browser/vcs-browser.webpack.config.js --env=vcsCompId=\"$*\" | cat; }; wrap"
   }
 }
