--- a/js/package.json
+++ b/js/package.json
@@ -7,6 +7,9 @@
   "devDependencies": {
     "@babel/core": "^7.15.8",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-transform-regenerator": "^7.16.5",
+    "copy-webpack-plugin": "^10.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "react": "^17.0.2",
     "react-devtools-core": "^4.16.0",
     "react-reconciler": "^0.26.2",
@@ -14,13 +17,24 @@
     "ts-node": "^10.2.1",
     "typescript": "^4.3.5",
     "webpack": "^5.59.1",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.1"
   },
   "dependencies": {
+    "@react-pdf/fontkit": "^2.0.7",
+    "@react-pdf/textkit": "^2.0.7",
+    "assert": "^2.0.0",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "core-js": "^3.20.1",
+    "cross-fetch": "^3.1.4",
     "css-color-names": "^1.0.1",
     "minimist": "^1.2.5",
+    "process": "^0.11.10",
     "random-seed": "^0.3.0",
     "split": "^1.0.1",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.4",
     "uuid": "^8.3.2"
   },
   "imports": {
@@ -33,7 +47,8 @@
     "test-scenario": "yarn run ts-node -T vcs-test-runner.js --scenario",
     "line-protocol": "yarn run ts-node -T vcs-line-protocol-main.js --compid",
     "import-test": "yarn run ts-node -T import-test.mjs --compid",
-    "hello-browser": "yarn webpack --config lib-browser/vcs-browser.webpack.config.js --env=vcsCompId=example:hello; echo 'Now open devrig/vcs-rig.html in your web browser.'",
-    "build-browser": "wrap () { yarn webpack --config lib-browser/vcs-browser.webpack.config.js --env=vcsCompId=\"$*\" | cat; }; wrap"
+    "hello-browser": "yarn webpack --config lib-browser/vcs-browser.webpack.config.js --env compid=example:hello; echo 'Now open devrig/vcs-rig.html in your web browser.'",
+    "build-browser": "wrap () { yarn webpack --config lib-browser/vcs-browser.webpack.config.js --env compid=\"$*\" | cat; }; wrap",
+    "hello-serve": "yarn webpack serve --config lib-browser/vcs-browser.webpack.config.js --env compid=example:hello"
   }
 }
