--- a/js/package.json
+++ b/js/package.json
@@ -51,6 +51,7 @@
     "test-scenario": "yarn run ts-node -T vcs-test-runner.js --scenario",
     "line-protocol": "yarn run ts-node -T vcs-line-protocol-main.js --compid",
     "import-test": "yarn run ts-node -T import-test.mjs --compid",
+    "open-browser": "wrap () { yarn webpack serve --open --env compid=\"$*\" | cat; }; wrap",
     "build-browser": "wrap () { yarn webpack --env use_comp_filename --env compid=\"$*\" | cat; }; wrap",
     "hello-browser": "yarn webpack serve --open --env compid=example:hello"
   }
