--- a/server-render/canvex/.vscode/settings.json
+++ b/server-render/canvex/.vscode/settings.json
@@ -74,6 +74,7 @@
     "unordered_set": "cpp",
     "utility": "cpp",
     "vector": "cpp",
-    "filesystem": "cpp"
+    "filesystem": "cpp",
+    "__bits": "cpp"
   }
 }
