Remove ts-node dependency from VCS runner

--- a/js/package.json
+++ b/js/package.json
@@ -4,10 +4,12 @@
   "author": "Daily.co",
   "license": "Copyright (c) Daily.co",
   "private": true,
+  "type": "module",
   "devDependencies": {
     "@babel/core": "^7.15.8",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/plugin-transform-regenerator": "^7.16.5",
+    "@swc/cli": "^0.1.55",
     "copy-webpack-plugin": "^10.2.0",
     "html-webpack-plugin": "^5.5.0",
     "react": "17.0.2",
@@ -23,12 +25,12 @@
   "dependencies": {
     "@react-pdf/fontkit": "^2.0.7",
     "@react-pdf/textkit": "^2.0.7",
+    "@swc/core": "^1.2.155",
     "assert": "^2.0.0",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "core-js": "^3.20.1",
     "cross-fetch": "^3.1.4",
-    "css-color-names": "^1.0.1",
     "deep-equal": "^2.0.5",
     "fs-extra": "^10.0.0",
     "minimist": "^1.2.5",
