--- a/js/package.json
+++ b/js/package.json
@@ -29,6 +29,7 @@
     "core-js": "^3.20.1",
     "cross-fetch": "^3.1.4",
     "css-color-names": "^1.0.1",
+    "deep-equal": "^2.0.5",
     "fs-extra": "^10.0.0",
     "minimist": "^1.2.5",
     "process": "^0.11.10",
