--- a/js/package.json
+++ b/js/package.json
@@ -16,8 +16,6 @@
     "react-devtools-core": "^4.16.0",
     "react-reconciler": "^0.26.2",
     "scheduler": "^0.20.2",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.3.5",
     "webpack": "^5.59.1",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.1"
@@ -49,13 +47,11 @@
     "#vcs-react/hooks": "./src/react/hooks/index.js"
   },
   "scripts": {
-    "hello-node": "yarn run ts-node -T vcs-benchmark.js --comp example/hello.jsx",
-    "graphics-test": "yarn run ts-node -T vcs-benchmark.js --comp example/graphics-test.jsx",
-    "test-scenario": "yarn run ts-node -T vcs-test-runner.js --scenario",
-    "line-protocol": "yarn run ts-node -T vcs-line-protocol-main.js --compid",
-    "import-test": "yarn run ts-node -T import-test.mjs --compid",
+    "open-browser-hello": "yarn webpack serve --open --env compid=example:hello",
     "open-browser": "wrap () { yarn webpack serve --open --env compid=\"$*\" | cat; }; wrap",
     "build-browser": "wrap () { yarn webpack --env use_comp_filename --env compid=\"$*\" | cat; }; wrap",
-    "hello-browser": "yarn webpack serve --open --env compid=example:hello"
+    "benchmark-graphics-test": "node vcs-benchmark.js --comp example/graphics-test.jsx",
+    "test-scenario": "node vcs-test-runner.js --scenario",
+    "line-protocol": "node vcs-line-protocol-main.js --compid"
   }
 }
