--- a/js/package.json
+++ b/js/package.json
@@ -9,7 +9,11 @@
     "@babel/core": "^7.15.8",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/plugin-transform-regenerator": "^7.16.5",
+    "@babel/plugin-transform-runtime": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "@babel/preset-react": "^7.18.6",
     "@swc/cli": "^0.1.55",
+    "babel-loader": "^8.2.5",
     "copy-webpack-plugin": "^10.2.0",
     "html-webpack-plugin": "^5.5.0",
     "react": "17.0.2",
