--- a/server-render/canvex/.vscode/settings.json
+++ b/server-render/canvex/.vscode/settings.json
@@ -75,6 +75,8 @@
     "utility": "cpp",
     "vector": "cpp",
     "filesystem": "cpp",
-    "__bits": "cpp"
+    "__bits": "cpp",
+    "concepts": "cpp",
+    "variant": "cpp"
   }
 }
