VCS heartbeat from runner to StreamingWorker

--- a/server-render/canvex/.vscode/settings.json
+++ b/server-render/canvex/.vscode/settings.json
@@ -78,5 +78,6 @@
     "__bits": "cpp",
     "concepts": "cpp",
     "variant": "cpp"
-  }
+  },
+  "C_Cpp.default.compileCommands": "builddir/vscode_compile_commands.json"
 }
