--- a/js/package.json
+++ b/js/package.json
@@ -39,7 +39,8 @@
     "split": "^1.0.1",
     "stream-browserify": "^3.0.0",
     "util": "^0.12.5",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "webvtt-parser": "^2.2.0"
   },
   "resolutions": {
     "react": "17.0.2"
