--- a/js/package.json
+++ b/js/package.json
@@ -52,6 +52,7 @@
     "#vcs-react/components": "./src/react/components/index.js",
     "#vcs-react/contexts": "./src/react/contexts/index.js",
     "#vcs-react/hooks": "./src/react/hooks/index.js",
+    "#vcs-stdlib/components": "./src/stdlib/components/index.js",
     "#vcs-stdlib/layouts": "./src/stdlib/layouts/index.js"
   },
   "scripts": {
