--- a/server-render/vcsrender/src/meson.build
+++ b/server-render/vcsrender/src/meson.build
@@ -1,5 +1,5 @@
 vcsrender_base_sources = files(
-  'scenedesc.cpp',
+  'parse/parse_scenedesc.cpp',
   'yuv_compositor.cpp',
   'file_util.cpp',
   'fileseq_util.cpp',
@@ -10,7 +10,9 @@ vcsrender_demo_sources = files(
 ) + vcsrender_base_sources
 
 vcsrender_cli_sources = files(
+  'parse/parse_inputtimings.cpp',
   'vcsrender_main.cpp',
   'imageseq.cpp',
   'sceneseq.cpp',
+  'inputloader.cpp',
 ) + vcsrender_base_sources
