Remove unnecessary Babel plugins from VCS dev setup

--- a/package.json
+++ b/package.json
@@ -3,9 +3,5 @@
   "version": "0.1.0",
   "author": "Daily.co",
   "license": "BSD-2-Clause",
-  "type": "module",
-  "devDependencies": {
-    "@babel/core": "^7.22.15",
-    "@babel/runtime": "^7.22.15"
-  }
+  "type": "module"
 }
