--- a/js/package.json
+++ b/js/package.json
@@ -30,6 +30,7 @@
     "buffer": "^6.0.3",
     "core-js": "^3.29.0",
     "cross-fetch": "^3.1.5",
+    "emoji-regex": "^10.2.1",
     "fast-deep-equal": "^3.1.3",
     "fs-extra": "^10.1.0",
     "minimist": "^1.2.8",
