--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "daily-vcs-sdk",
   "version": "0.1.0",
+  "packageManager": "yarn@1.22.22",
   "author": "Daily.co",
   "license": "BSD-2-Clause",
   "packageManager": "yarn@4.4.1",
