--- a/js/.gitignore
+++ b/js/.gitignore
@@ -1,3 +1,12 @@
 /build
 /render-output
 /dist
+
+# yarn 4.x
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
