--- a/js/package.json
+++ b/js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@daily-co/vcs-core",
-  "version": "0.2.7",
+  "version": "0.2.8",
   "author": "Daily (https://daily.co)",
   "homepage": "https://docs.daily.co/reference/vcs",
   "repository": {
@@ -9,20 +9,21 @@
   },
   "license": "BSD-2-Clause",
   "type": "module",
+  "packageManager": "yarn@4.5.0",
   "devDependencies": {
     "@babel/core": "^7.23.2",
     "@babel/preset-env": "^7.23.2",
     "@babel/preset-react": "^7.22.15",
     "babel-loader": "^9.1.3",
-    "copy-webpack-plugin": "^10.2.4",
+    "copy-webpack-plugin": "^12.0.2",
     "html-webpack-plugin": "^5.6.0",
     "react": "17.0.2",
     "react-devtools-core": "^4.28.5",
     "react-reconciler": "^0.26.2",
     "scheduler": "^0.20.2",
-    "webpack": "^5.91.0",
+    "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.2"
+    "webpack-dev-server": "^5.1.0"
   },
   "dependencies": {
     "@react-pdf/fontkit": "^2.0.7",
@@ -56,11 +57,11 @@
     "#vcs-stdlib/layouts": "./src/stdlib/layouts/index.js"
   },
   "scripts": {
-    "devrig": "wrap () { yarn webpack serve --env target=devrig --env compid=\"$*\" | cat; }; wrap",
+    "devrig": "yarn webpack serve --env target=devrig --env compid=$0",
     "open-browser-hello": "yarn webpack serve --open --env compid=example:hello",
-    "open-browser": "wrap () { yarn webpack serve --open --env target=devrig --env compid=\"$*\" | cat; }; wrap",
-    "build-browser": "wrap () { yarn webpack --env target=devrig --env use_comp_filename --env compid=\"$*\" | cat; }; wrap",
-    "build-composition-module-for-web": "wrap () { yarn webpack --env target=module_web --env compid=\"$1\" --env vcsroot=\"$2\" | cat; }; wrap",
+    "open-browser": "yarn webpack serve --open --env target=devrig --env compid=$0",
+    "build-browser": "yarn webpack --env target=devrig --env use_comp_filename --env compid=$0",
+    "build-composition-module-for-web": "yarn webpack --env target=module_web --env compid=\"$0\" --env vcsroot=\"$1\"",
     "benchmark-graphics-test": "node vcs-benchmark.js --comp example/graphics-test.jsx",
     "test-scenario": "node vcs-test-runner.js --scenario",
     "line-protocol": "node vcs-line-protocol-main.js --compid"
