VCS JS SDK: undo yarn 4.5 upgrade

--- a/js/package.json
+++ b/js/package.json
@@ -9,7 +9,6 @@
   },
   "license": "BSD-2-Clause",
   "type": "module",
-  "packageManager": "yarn@4.5.0",
   "devDependencies": {
     "@babel/core": "^7.23.2",
     "@babel/preset-env": "^7.23.2",
@@ -57,11 +56,11 @@
     "#vcs-stdlib/layouts": "./src/stdlib/layouts/index.js"
   },
   "scripts": {
-    "devrig": "yarn webpack serve --env target=devrig --env compid=$0",
+    "devrig": "wrap () { yarn webpack serve --env target=devrig --env compid=\"$*\" | cat; }; wrap",
     "open-browser-hello": "yarn webpack serve --open --env compid=example:hello",
-    "open-browser": "yarn webpack serve --open --env target=devrig --env compid=$0",
-    "build-browser": "yarn webpack --env target=devrig --env use_comp_filename --env compid=$0",
-    "build-composition-module-for-web": "yarn webpack --env target=module_web --env compid=\"$0\" --env vcsroot=\"$1\"",
+    "open-browser": "wrap () { yarn webpack serve --open --env target=devrig --env compid=\"$*\" | cat; }; wrap",
+    "build-browser": "wrap () { yarn webpack --env target=devrig --env use_comp_filename --env compid=\"$*\" | cat; }; wrap",
+    "build-composition-module-for-web": "wrap () { yarn webpack --env target=module_web --env compid=\"$1\" --env vcsroot=\"$2\" | cat; }; wrap",
     "benchmark-graphics-test": "node vcs-benchmark.js --comp example/graphics-test.jsx",
     "test-scenario": "node vcs-test-runner.js --scenario",
     "line-protocol": "node vcs-line-protocol-main.js --compid"
