--- a/package.json
+++ b/package.json
@@ -3,6 +3,5 @@
   "version": "0.1.0",
   "author": "Daily.co",
   "license": "BSD-2-Clause",
-  "type": "module",
-  "packageManager": "yarn@4.5.0"
+  "type": "module"
 }
